--- a/src/styles/components/filter_form.scss
+++ b/src/styles/components/filter_form.scss
@@ -105,6 +105,12 @@
         background-position: center;
         background-size: 100% 100%;
       }
+
+      &:has(+ .open) {
+        z-index: 111111111;
+        position: relative;
+        background-image: none;
+      }
     }
 
     .choices {
